app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployemtn
spec:
  selector:
    matchLabels:
      app: products
      department: sales
  replicas: 3
  template:
    metadata:
      labels:
        app: products
        department: sales
    spec:
      containers:
        - name: hello
          image: "codernoone/webflux-rest-api"
        - name: mongo
          image: "codernoone/mongo_with_rs0"
