cinema-webflux-rest-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: cinema-webflux-rest-api
  name: cinema-webflux-rest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cinema-webflux-rest-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/net: "true"
        io.kompose.service: cinema-webflux-rest-api
    spec:
      containers:
      - image: cinema-webflux-rest-api
        imagePullPolicy: ""
        name: cinema-webflux-rest-api
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
