mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo.56
  name: deployment.name.46
  namespace: default
spec:
  replicas: 1
  selector:
  template:
