two-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: two-containers
spec:

  restartPolicy: Never

  volumes:
    - name: shared-data
      emptyDir: {}

  containers:

    - name: mongo-db
      image: codernoone/mongo_with_rs0
      volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html

    - name: app-container
      image: codernoone/webflux-rest-api
      volumeMounts:
        - name: shared-data
          mountPath: /pod-data
