endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: app
subsets:
  - addresses:
      - ip: 127.0.0.1
    ports:
      - port: 30388
