mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    generated.by: 8gwifi.org
  name: service.name.0
  namespace: default
spec:
  ports:
    - name: nameme_01
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: demo.56
  type: NodePort
